2 column article layout

--- a/styles/styles.css
+++ b/styles/styles.css
@@ -522,6 +522,14 @@ body.laz-blue {
   .breadcrumbs-outer {
     background-color: var(--laz-blue);
   }
+
+  h3, a {
+    color: var(--laz-blue);
+  }
+
+  h2 {
+    color: var(--royal-blue);
+  }
 }
 
 [data-theme="laz-blue"] {
