--- a/templates/blog-article/blog-article.css
+++ b/templates/blog-article/blog-article.css
@@ -1,1 +1,90 @@
-/* blog-article specific styles */
+.blog-article main {
+    h1 {
+        font-size: var(--heading-font-size-xl);
+    }
+    .section-outer {
+        margin: unset;
+
+        > .section {
+            padding: 0 15px;
+        }
+
+        &:last-of-type {
+            margin-top: 50px;
+
+            .default-content-wrapper {
+                text-align: center;
+            }
+        }
+
+        h2 {
+            font-size: var(--heading-font-size-s);
+            font-weight: var(--font-weight-medium);
+            text-transform: none;
+            font-family: var(--heading-font-family);
+        }
+
+            .related-title {
+                font-family: var(--body-font-family);
+                font-size: var(--body-font-size-m);
+                color: var(--text-color);
+            }
+        }
+    }
+
+@media (width >= 768px) {
+    .blog-article main {
+        h1 {
+            font-size: var(--heading-font-size-xxl);
+        }
+
+        .section-outer .section {
+            max-width: 800px;
+            margin-left: auto;
+            margin-right: auto;
+        }
+    }
+}
+
+@media (width >= 1024px) {
+    .blog-article main {
+        display: grid;
+        grid-template-areas:
+        "breadcrumb breadcrumb"
+        "content sidebar"
+    "content sidebar";
+        column-gap: 40px;
+        position: relative;
+        max-width: unset;
+
+        .section-outer:not(last-of-type) {
+            grid-area: auto / content;
+            max-width: 660px;
+            justify-self: end;
+            grid-template-rows: max-content;
+        }
+
+        .section-outer:last-of-type {
+            grid-area: sidebar;
+            justify-self: start;
+            grid-row-end: last-line;
+
+            .section {
+                width: 240px;
+            }
+        }
+    }
+}
+
+@media (width >= 1200px) {
+    .blog-article main {
+        .section-outer:not(last-of-type) {
+            max-width: 800px;
+        }
+
+        .section-outer:last-of-type .section {
+            width: 320px;
+            margin-top: 80px;
+        }
+    }
+}
