--- a/blocks/header/header.css
+++ b/blocks/header/header.css
@@ -84,7 +84,7 @@ header .nav-sections ul li {
   text-transform: uppercase;
 }
 
-header .nav-sections ul li a {
+header .nav-sections ul li > a {
   position: relative;
   color: var(--dark-gray);
   font-weight: bold;
@@ -172,136 +172,13 @@ header .megamenu {
   display: flex;
   justify-content: space-between;
   padding: 0 15px;
+  width: 100%;
 }
 
-header .megamenu ul {
-  display: flex;
-  flex-direction: column;
-  align-items: flex-start;
+header .megamenu > .section{
+  width: 100%;
 }
 
-header .megamenu ul li {
-  height: 60px;
-  position: relative;
-  text-transform: none;
-  display: flex;
-  padding-right: 10px;
-  margin-left: 0;
-}
-
-header .megamenu ul li .icon, header .megamenu ul li a {
-  display: inline-block;
-  vertical-align: middle;
-  top: 50%;
-  transform: translateY(-50%);
-  font-size: 14px;
-}
-
-header .megamenu ul li .icon{
-  background-color: var(--red);
-  min-height: 40px;
-  width: 40px;
-  float: left;
-  border-radius: 50%;
-  max-width: 30%;
-  position: relative;
-  color: var(--white);
-}
-
-header .megamenu ul li .icon img {
-  position: relative;
-  left: 50%;
-  transform: translateX(-50%);
-}
-
-header .megamenu ul li a {
-  font-weight: bold;
-  color: var(--dark-gray);
-  line-height: 1.3;
-  transition: all .2s;
-  z-index: 30;
-  padding-left: 15px;
-  max-width: 70%;
-  float: left;
-  position: relative;
-  display: flex;
-  align-items: center;
-}
-
-header .megamenu .default-content-wrapper {
-  display: flex;
-  flex-direction: column;
-  align-items: flex-start;
-}
-
-header .megamenu ul > li:not(.button-container) > a:not(.button)::after {
-  content: none;
-}
-
-header .megamenu .columns > div {
-  align-items: flex-start;
-}
-
-header .megamenu h4 {
-  color: var(--charcoal-gray);
-}
-
-header .nav-sections ul li:not(.button-container) .megamenu h4 > a{
-  text-decoration: auto;
-}
-
-header .nav-sections ul li:not(.button-container) .megamenu h4 > a::after{
-  content: none;
-}
-
-header .megamenu .button-container a {
-  color: var(--gold);
-  text-transform: uppercase;
-  font-size: 16px;
-  letter-spacing: .5px;
-  text-decoration: none;
-  text-decoration-line: none;
-  text-decoration-style: solid;
-  text-decoration-color: currentcolor;
-  margin: 30px 0 0 15px;
-  display: flex;
-}
-
-header .megamenu .button-container a::after {
-  content: url("/icons/caret-right-solid.svg");
-  position: relative;
-  height: 10px;
-  width: 10px;
-}
-
-/* icon bg colors */
-header .megamenu .dark-blue .icon{
-  background-color: var(--product-dark-blue);
-}
-
-header .megamenu .berry .icon{
-  background-color: var(--product-berry);
-}
-
-header .megamenu .orange .icon{
-  background-color: var(--product-orange);
-}
-
-header .megamenu .green .icon{
-  background-color: var(--product-green);
-}
-
-header .megamenu .purple .icon{
-  background-color: var(--product-purple);
-}
-
-header .megamenu .red .icon{
-  background-color: var(--product-red);
-}
-
-header .megamenu li.navy-blue .icon{
-  background-color: var(--product-navy-blue);
-}
 
 @media (width >= 1024px) {
   header .nav-brand {
