--- a/blocks/tabs/tabs.css
+++ b/blocks/tabs/tabs.css
@@ -119,7 +119,7 @@
     width: auto;
   }
 
-  .tabs.columns .tabs-panel .left-content{
+  .tabs.columns .tabs-panel .left-content.has-border{
     border-right: 3px solid #C83192;
     border-top-right-radius: 2px;
     border-bottom-right-radius: 2px;
