--- a/blocks/header/header.css
+++ b/blocks/header/header.css
@@ -206,6 +206,146 @@ header .megamenu > .section-outer{
   }
 }
 
+/* Tabs Columns */
+.header .tabs.columns {
+  display: flex;
+}
+
+.header .tabs.columns .tabs-list {
+  flex-direction: column;
+}
+
+.header .tabs.columns .tabs-list > button{
+  border: none;
+  width: 100%;
+  position: relative;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+}
+
+.header .tabs.columns .tabs-list .icon {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  width: 150px;
+  height: 58px;
+}
+
+.header .tabs.columns .tabs-list p{
+  display: flex;
+}
+
+.header .tabs.columns .tabs-list button .btn-icon {
+  content: url("/icons/icon-caret-right.svg");
+  width: 29px;
+  height: 29px;
+}
+
+.header .tabs.columns .tabs-panel{
+  width: 100%;
+}
+
+.header .tabs.columns .tabs-panel > div{
+  margin: 40px;
+}
+
+.header .tabs.columns .tabs-panel > div:first-child{
+  margin: 0 40px 40px;
+}
+
+.header .tabs.columns .tabs-panel ul.tags-list{ 
+  display: flex;
+  margin-bottom: 38px;
+  gap: 10px;
+  list-style: none;
+}
+
+.header .tabs.columns .tabs-panel ul.tags-list li{
+  background-color: #EBECF5;
+  border-radius: 19px;
+  max-height: 20px;
+  padding: 2px 15px;
+}
+
+.header .tabs.columns .tabs-panel ul.tags-list li p{
+  color: #31409A;
+  font-weight: 600;
+  font-size: 11px;
+}
+
+.header .tabs.columns .tabs-panel .icon{
+  height: 48px;
+  margin-bottom: 20px;
+  max-width: 100%;
+  width: auto;
+}
+
+.header .tabs.columns .tabs-panel .left-content.has-border{
+  border-right: 3px solid #C83192;
+  border-top-right-radius: 2px;
+  border-bottom-right-radius: 2px;
+}
+
+.header .tabs.columns .tabs-panel .button-container{
+  margin:0;
+}
+
+.header .tabs.columns .tabs-panel .button-container a{
+  max-width: 235px;
+  margin: 5px 0;
+  width: 100%;
+  font-size: 14px;
+}
+
+.header .tabs.columns .tabs-panel .top-content{
+  display: flex;
+  align-items: baseline;
+  margin-bottom: 25px;
+  gap: 10px;
+  justify-content: flex-start;
+}
+
+.header .tabs.columns .tabs-panel .top-content span{
+  width: 90px;
+  margin: 0 10px 0 16px;
+}
+
+.header .tabs.columns .tabs-panel .top-content span:first-child{
+  width: 25px;
+  margin: 0;
+}
+
+.header .tabs.columns .tabs-panel .top-content strong{
+  margin: 0;
+  font-size: 20px;
+  color: #35302C;
+}
+
+.header .tabs.columns .tabs-panel > div > p .button.secondary {
+  width: 100%;
+  background-color: #ffffff;
+  color: #000;
+  border: 1px solid #ddd;
+  border-radius: 8px;
+  padding: 18px 20px;
+  margin: 5px;
+  cursor: pointer;
+  font-size: 16px;
+  display: flex;
+  gap: 20px;
+  max-width: 260px;
+  justify-content: flex-start;
+  align-items: center;
+  font-weight: 400;
+}
+
+.header .tabs.columns .tabs-panel > div > p .button.secondary .icon {
+  width: 20px;
+  height: 20px;
+  margin: 0;
+}
+
 
 @media (width >= 1200px) {
   header nav {
