--- a/blocks/header/header.css
+++ b/blocks/header/header.css
@@ -62,12 +62,12 @@ header .nav-sections {
   height: 100%;
 }
 
-header .nav-sections > .section, header .nav-sections > .section > div, header .nav-sections ul li strong {
+header .nav-sections > .section, header .nav-sections > .section > div, header .nav-sections ul.primary-nav-items >  li strong {
   display: block;
   height: 100%;
 }
 
-header .nav-sections ul{
+header .nav-sections ul.primary-nav-items {
   display: flex;
   align-items: center;
   height: 100%;
@@ -75,7 +75,7 @@ header .nav-sections ul{
   margin: 0 -10px;
 }
 
-header .nav-sections ul li {
+header .nav-sections ul.primary-nav-items >  li {
   display: inline-block;
   padding: 0;
   margin-left: 6px;
@@ -84,7 +84,7 @@ header .nav-sections ul li {
   text-transform: uppercase;
 }
 
-header .nav-sections ul li > a {
+header .nav-sections ul.primary-nav-items >  li > a {
   position: relative;
   color: var(--dark-gray);
   font-weight: bold;
@@ -99,7 +99,7 @@ header .nav-sections ul li > a {
   top: 50%;
 }
 
-header .nav-sections ul li:not(.button-container) a:not(.button)::after {
+header .nav-sections ul.primary-nav-items >  li:not(.button-container) a:not(.button)::after {
   content: url("/icons/solutions-right.svg");
   position: absolute;
   top: 0;
@@ -108,13 +108,13 @@ header .nav-sections ul li:not(.button-container) a:not(.button)::after {
 }
 
 
-header .nav-sections ul li a.button {
+header .nav-sections ul.primary-nav-items >  li a.button {
   padding: 8px 15px 6px;
   font-size: var(--body-font-size-xs);
 }
 
 
-header .nav-sections ul li .icon-search {
+header .nav-sections ul.primary-nav-items >  li .icon-search {
   height: 22px;
   width: 20px;
 
@@ -163,7 +163,7 @@ header .megamenu-container {
   justify-content: center;
 }
 
-header .nav-sections ul li[aria-expanded="true"] .megamenu-container {
+header .nav-sections ul.primary-nav-items >  li[aria-expanded="true"] .megamenu-container {
   opacity: 1;
   visibility: visible;
 }
@@ -200,7 +200,7 @@ header .megamenu > .section-outer{
     padding-right: 15px;
   }
 
-  header .nav-sections ul li {
+  header .nav-sections ul.primary-nav-items >  li {
     font-family: var(--body-font-family);
     text-transform: none;
   }
@@ -346,6 +346,115 @@ header .megamenu > .section-outer{
   margin: 0;
 }
 
+/* Header columns */
+.header .megamenu .columns-container {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  gap: 20px;
+
+  .columns.block > div {
+    display: flex;
+    flex-direction: row;
+    justify-content: flex-start;
+    align-items: flex-start;
+  }
+
+  .columns-wrapper {
+    width: 50%;
+  }
+}
+
+.header .megamenu .columns-container .columns.block > div >div{
+  display: flex;
+  flex-direction: column;
+  justify-content: flex-start;
+
+  ul {
+    display: flex;
+    flex-direction: column;
+    gap: 15px;
+    justify-content: flex-start;
+    align-items: flex-start;
+    margin: 0;
+    padding: 0;
+  }
+
+  h3 > a, a > h3 {
+    font-size: 24px;
+    color: #45423f;
+    font-family: var(--body-font-family);
+  }
+
+  ul > li > a {
+    font-weight: 400;
+    color: #48433F;
+    text-transform: none;
+  }
+
+  ul > li  .icon {
+    width: 23px;
+    height: auto;
+    margin-right: 15px;
+  }
+
+  strong {
+    font-weight: 600;
+    font-size: 18px;
+    padding: 20px 0 0;
+  }
+
+  .icon {
+    width: 130px;
+    height: auto;
+  }
+}
+
+.header .megamenu .columns-container .columns.block > div >div:first-child ul{
+  border-right: 1px solid #ebecf5;
+  max-width: 232px;
+}
+
+.header .megamenu > .columns-container > div:last-child.default-content-wrapper{
+  width: 25%;
+}
+
+.header .megamenu .columns-container .columns.content-cards > div{
+  background-color: #314091;
+  color: #fff;
+  display: flex;
+  align-items: flex-start;
+  flex-direction: column;
+  border-radius: 10px;
+  justify-content: flex-start;
+
+  > div > * {
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
+    justify-content: flex-start;
+  }
+  
+  .icon {
+    height: 25px !important;
+    width: 25px !important;
+    filter: brightness(0) invert(1);
+  }
+
+  p {
+    font-weight: 700;
+    font-size: 18px;
+  }
+}
+
+@media (width >= 991px) {
+  .header .megamenu .columns.content-cards > div{
+    padding: 36px 50px 25px 30px;
+      gap: 5px;
+      min-width: 240px;
+        min-height: 180px;
+  }
+}
 
 @media (width >= 1200px) {
   header nav {
@@ -366,26 +475,26 @@ header .megamenu > .section-outer{
     }
   }
 
-  header .nav-sections ul {
+  header .nav-sections ul.primary-nav-items  {
     margin: 0 -25px;
     padding-left: 15px;
     padding-right: 15px;
   }
 
-  header .nav-sections ul li {
+  header .nav-sections ul.primary-nav-items >  li {
     margin-left: 10px;
     margin-right: 10px;
   }
 
-  header .nav-sections ul li a {
+  header .nav-sections ul.primary-nav-items >  li a {
     font-size: var(--body-font-size-s);
   }
 
-  header .nav-sections ul li a.button {
+  header .nav-sections ul.primary-nav-items >  li a.button {
     font-size: var(--body-font-size-s);
   }
 
-  header .nav-sections ul li .icon img {
+  header .nav-sections ul.primary-nav-items >  li .icon img {
     height: 100%;
     width: 100%;
   }
