--- a/blocks/header/header.css
+++ b/blocks/header/header.css
@@ -104,9 +104,11 @@ header .nav-sections ul.primary-nav-items >  li > a, header .nav-tools ul > li >
 header .nav-sections ul.primary-nav-items >  li:not(.button-container) > a:not(.button)::after {
   content: url("/icons/solutions-right.svg");
   position: absolute;
+  padding-left: 5px;
   top: 0;
-  right: 0;
+  right: -2px;
   transform: rotate(90deg) translate(-7px,0) scale(0.45);
+  transition: all .2s;
 }
 
 
@@ -115,6 +117,15 @@ header .nav-sections ul.primary-nav-items >  li a.button, header .nav-tools ul >
   font-size: var(--body-font-size-xs);
 }
 
+header .nav-sections ul.primary-nav-items >  li[aria-expanded="true"] > a {
+  color: var(--red);
+  border-bottom: 2px solid var(--red);
+}
+
+header .nav-sections ul.primary-nav-items >  li[aria-expanded="true"]:not(.button-container) > a:not(.button)::after {
+  content: url("/icons/solutions-right-red.svg");
+  transform: rotate(-90deg) translate(7px,0) scale(0.45);
+}
 
 header .nav-tools ul >  li .icon-search {
   height: 22px;
@@ -147,7 +158,7 @@ header .nav-hamburger .navicon-line {
 
 /* secondary nav */
 header .megamenu-container {
-  border-top: 2px solid var(--red);
+  border: 1px solid #E6EEF3;
   width: 100%;
   background-color: var(--white);
   opacity: 0;
@@ -156,7 +167,7 @@ header .megamenu-container {
   z-index: 200;
   position: absolute;
   left: 0;
-  top: 132px;
+  top: 130px;
   padding: 50px 0 58px;
   height: auto;
   box-shadow: 0 5px 10px 0 rgb(0 0 0 / 15%);
@@ -363,7 +374,11 @@ header .megamenu > .section-outer{
   }
 
   .columns-wrapper {
-    width: 50%;
+    flex-grow: 1;
+
+    .columns-2-cols{
+      max-width: 75%;
+    }
   }
 }
 
@@ -373,6 +388,7 @@ header .megamenu > .section-outer{
   justify-content: flex-start;
 
   ul {
+    width: 100%;
     display: flex;
     flex-direction: column;
     gap: 15px;
