--- a/blocks/tabs/tabs.css
+++ b/blocks/tabs/tabs.css
@@ -30,7 +30,7 @@
   
   .tabs .tabs-list button[aria-selected='true'] {
       border-bottom: 1px solid var(--background-color);
-      background-color: rgba(49, 64, 154, 0.05);
+      background-color: #31409A0D;
       cursor: initial;
   }
   
